--- a/index.html
+++ b/index.html
@@ -19,9 +19,22 @@
 
   <!-- Tag <body> é o corpo do documento, onde tem as informações que serão mostradas. -->
   <body>
+
+    <img
+      id="balls"
+      src="images/balls.svg"
+      alt="Bolinhas alaranjadas no canto inferior direito da tela"
+    />
+
     <div id="hero">
-      <div class="line"></div>
+
+      <img
+        src="images/img1.jpg"
+        alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com Móveis"
+      />
+
       <h1>Ambientes únicos para você!</h1>
+
       <p>
         Nós criamos ambientes <span>exclusivos e únicos</span>, com muito
         bom gosto e profissionalismo, investimos tempo e
@@ -29,28 +42,27 @@
 
         <br />
         <br />
+
+        Tenha ambientes limpos e bem <span>decorados</span>, transmitindo
+        <strong>elegância e finesse</strong>
+        para todo aquele que estiver ali.
       </p>
+
     </div>
-    <img
-      src="images/img1.jpg"
-      alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com Móveis"
-    />
+    
 
     <div id="footer">
-      <a target="_blank" href="https://instagram.com/moveisparavoce"
-        >Instagram</a
-      >
-      <a href="mailto:contato@moveisparavoce.com">Fale conosco</a>
+
+      <div class="line"></div>
+
+      <a target="_blank" href="https://instagram.com/moveisparavoce">
+        Instagram
+      </a>
+      <a href="mailto:contato@moveisparavoce.com">
+        Fale conosco
+      </a>
+
     </div>
 
-    Tenha ambientes limpos e bem <span>decorados</span>, transmitindo
-    <strong>elegância e finesse</strong>
-    para todo aquele que estiver ali.
-
-    <img
-      id="balls"
-      src="images/balls.svg"
-      alt="Bolinhas alaranjadas no canto inferior direito da tela"
-    />
   </body>
 </html>
