--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     
 
-    <div id="footer">
+    <footer>
 
       <div class="line"></div>
 
@@ -62,7 +62,7 @@
         Fale conosco
       </a>
 
-    </div>
+    </footer>
 
   </body>
 </html>
